tests/negative/gold/named-constructor2-test.gold
tests/negative/named-constructor2-test.toit:10:10: error: Couldn't find matching constructor in superclass 'A'
    super.foo  // Finds the static function.
         ^~~~
tests/negative/named-constructor2-test.toit:11:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
Compilation failed
